assets/styles/index.scss
$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
@import '~bootstrap-sass/assets/stylesheets/bootstrap/';
$plain-black: #000;
$border: 5px solid $plain-black;
$background-color: #fefefe;
$font-color: #0f0f0f;
$height: width;

body {
  background-color: $background-color;
  color: $font-color;
}

.col-xs-4 {
  height: 20vw;
  padding-top: 5vw;
  text-align: center;

  button {
    height: 10vw;
    width: 10vw;
  }
}

.left {
  border-left: $border;
}

.right {
  border-right: $border;
}

.bottom {
  border-bottom: $border;
}

.top {
  border-top: $border;
}

.gamepiece {
  font-size: 70px;
  text-align: center;
}

@media (max-width: 550px) {
  .gamepiece {
    font-size: 40px;
  }
}

